cabal-version:      2.4
name:               poker-hs
version:            0.1.0.0

-- synopsis:    Poker.
-- description: Poker.

license:            NONE
maintainer:         thomas.hua@student.uni-tuebingen.de

extra-source-files: CHANGELOG.md

executable poker-hs
    main-is:          Main.hs
    -- other-modules:

    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
